--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header id="headerOur">
-        <nav class="navbar navbar-expand-md navbar-dark">
+        <nav class="navbar navbar-expand-md navbar-dark " id="header">
             <!-- Brand -->
             <a class="navbar-brand" href="#"><img class="img-fluid" src="./img/crest.png" alt=""></a>
 
